# unicode-benchmark

./: .gitignore  CMakeLists.txt  CMakeSettings.json  makefile  readme.md
src/: common.cpp  common.hpp  execution.cpp  main.cpp  main.manifest  main.rc.in  utf8h.cpp  utf8proc.cpp  utfcpp.cpp  utfz.cpp
